Edited wiki page through web user interface.

--- a/wiki/DX_StackNav.wiki
+++ b/wiki/DX_StackNav.wiki
@@ -7,8 +7,8 @@
 This plugin was originally requested by Paul Allington in this thread in the DX forums: http://community.devexpress.com/forums/p/89138/305114.aspx#305114
 
 ==== Usage ====
- * Launch the tool window via the DevExpress\Tool Windows\StackNav menu item
- * Paste a Stack Trace into the TextBox
+ * Launch the tool window via the !DevExpress\Tool Windows\!StackNav menu item
+ * Paste a Stack Trace into the !TextBox
  * Double click any rows to jump to the specified location.
 
 http://dxcorecommunityplugins.googlecode.com/svn/trunk/DX_StackNav/Screenshots/StackNav.png
