Edited wiki page through web user interface.

--- a/wiki/DefaultSidebar.wiki
+++ b/wiki/DefaultSidebar.wiki
@@ -25,6 +25,7 @@
     * [DX_CollapseFromEnd]
     * [DX_CustomCollapse]
     * [DX_FormatOnSave]
+    * [DX_StackNav]
   * Navigation Plugins
     * [CR_JumpToImplementation]
     * [CR_mdMarkerExtensions]
