--- a/wiki/DX_StackNav.wiki
+++ b/wiki/DX_StackNav.wiki
@@ -14,3 +14,6 @@ It parses a stack trace into a navigable grid.
  * Double click any row to jump to the specified location.
 
 http://dxcorecommunityplugins.googlecode.com/svn/trunk/DX_StackNav/Screenshots/StackNav.png
+
+==== Credit ====
+Author: RoryBecker
