--- a/wiki/DX_ZenCoding.wiki
+++ b/wiki/DX_ZenCoding.wiki
@@ -1,8 +1,8 @@
-#summary Emulates some of the features of !ZenCoding
+#summary Emulates some of the features of ZenCoding
 [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/DX_ZenCoding/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
 ==== Introduction ====
-This plugin is an addition to the Template expansion engine within CodeRush. It will not work with CodeRush Xpress. It emulates some of the features found in the !ZenCoding project. (http://code.google.com/p/zen-coding/) These features allow one to enter up html code more quickly.
+This plugin is an addition to the Template expansion engine within !CodeRush. It will not work with !CodeRush Xpress. It emulates some of the features found in the !ZenCoding project. (http://code.google.com/p/zen-coding/) These features allow one to enter up html code more quickly.
 
 ==== Configuration ====
  * Install plugin as usual.
