--- a/wiki/CR_ExtractHqlNamedQuery.wiki
+++ b/wiki/CR_ExtractHqlNamedQuery.wiki
@@ -1,6 +1,9 @@
 #summary Extracts a NHibernate's hql query to a separate xml file
 
 [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_ExtractHqlNamedQuery/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]            [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
+
+==== Requires DXCore 10.1 since build 1256 ====
+
 = Introduction =
 
 Details about the features of this plugin can be found [http://jorgerowies.blogspot.com/2010/03/coderush-plugin-to-extract-nhibernates.html here].
