Edited wiki page through web user interface.

--- a/wiki/CR_NavigateToDefinition.wiki
+++ b/wiki/CR_NavigateToDefinition.wiki
@@ -1,6 +1,9 @@
 #summary Navigates to the definition of the type, member or variable, searching in every project loaded into the solution
 
 [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_NavigateToDefinition/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]            [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
+
+==== Requires DXCore 10.1 since build 1257 ====
+
 = Introduction =
 
 Something I found really annoying is that when you have references to assemblies, the "Go To Definition" command of visual studio, takes you to the metadata instead of the actual code. This plugin tries to solve that problem.
