--- a/wiki/Refactor_Resolve.wiki
+++ b/wiki/Refactor_Resolve.wiki
@@ -3,6 +3,8 @@
 [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/Refactor_Resolve/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback  http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
 
+==== Requires DXCore 10.1 since build 1255 ====
+
 ==== Introduction ====
 
 Sometimes you know the name of the object you need, but you don't know the correct namespace.
