--- a/trunk/CodeIssueAnalysis/CodeIssueAnalysis/ToolWindow1.resx
+++ b/trunk/CodeIssueAnalysis/CodeIssueAnalysis/ToolWindow1.resx
@@ -173,6 +173,19 @@
         EF8uBRzh9LH9HD4gZK/QA093N7Zt3cjmDS5scXVZ3SD9a+p+A3z3/Gv+9SIaAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="btnExportHTMLTable.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGcSURBVDhPnZHLS4JREMX9KywqSMpCIwhCCCGlRRHYxo1u
+        3LkJQYwwooJaCEEtDKQibBFEQRAktAkqKArT0nxSWhQSEWUPU9Py7anvygci10UODPdyuPM7M3M59dor
+        1JocJphiJipPIlborBGrVwWUw9h7OYwKKHekAWid/quD8j3VNAINoLeEQJZYa3bMXIKMURn9SwF437IY
+        XAmyqyFnsVhEPp8n+qo7hvYpBx3QZ7qCK5whD5miQqGAXC5HMpMp6YvOKFrGz+mAXqMfjuc0ecg4ZrNZ
+        UphOp5FKpYhutEfQPGanA3rmfbA9lQDVcs76gaZRGx3QPevB6WMKu7dJWG4S2A58Yes6jk1/HOu+GNY8
+        URhO3tEwckYHdBncOH74wU4wAZ1OB41GA7VaDZVKBYVCAbPrE9NHr6jTWekA5nsOQt/EValUQi6XQyaT
+        EVeJRIJlRwQTh2FwtVUAbZNO7N0nsfHXslQqhVgshkgkIq4CgQCmiwj0+y/VAcObd2TDQwt+CIVC8Pl8
+        8Hg8NLZ2gsvlYmDeS4oV5mv8AqNrS4uPcDQlAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="$this.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
