Edited wiki page through web user interface.

--- a/wiki/DX_NewItem.wiki
+++ b/wiki/DX_NewItem.wiki
@@ -29,7 +29,7 @@ This plugin does require a minimum amount of setup.
  # Create a single !CodeRush Template
 Call it...
 {{{
-an?Templates?
+an?Template?
 }}}
 
 and change it's content to ...
