--- a/wiki/RoryBecker.wiki
+++ b/wiki/RoryBecker.wiki
@@ -19,6 +19,7 @@ Here are some links to some of the plugins I have written:
  * [CR_ClearAllMarkers]
  * [CR_LinkBar]
  * [DX_StackNav]
+ * [DX_NewItem]
 
 
 </td><td>
