Edited wiki page through web user interface.

--- a/wiki/CR_MarkerExtensions.wiki
+++ b/wiki/CR_MarkerExtensions.wiki
@@ -1,5 +1,7 @@
 #summary CR_MarkerExtensions Alternate navigation commands for CodeRush markers
 
+=THIS PAGE IS UNDER CONSTRUCTION=
+
 [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_QuickAddReference/ http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
 
