Edited wiki page through web user interface.

--- a/wiki/DefaultSidebar.wiki
+++ b/wiki/DefaultSidebar.wiki
@@ -28,7 +28,7 @@
     * [DX_StackNav]
   * Navigation Plugins
     * [CR_JumpToImplementation]
-    * [CR_mdMarkerExtensions]
+    * [CR_MarkerExtensions]
     * [CR_ShowFile]
     * [CR_NavigateToDefinition]
     * [CR_ClearAllMarkers]
