Edited wiki page through web user interface.

--- a/wiki/CR_MarkerExtensions.wiki
+++ b/wiki/CR_MarkerExtensions.wiki
@@ -3,6 +3,8 @@
 [http://dxcorecommunityplugins.googlecode.com/svn/trunk/CR_MarkerExtensions/bin/CR_MarkerExtensions.zip http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Download.png]      [http://code.google.com/p/dxcorecommunityplugins/wiki/InstallInstructions http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/InstallHelp.png]
 [http://code.google.com/p/dxcorecommunityplugins/wiki/Feedback http://dxcorecommunityplugins.googlecode.com/svn/trunk/Common/Graphics/Feedback.png]
 
+==== Requires DXCore/CodeRush 9.3 (does not work with 10.1+) ====
+
 == Introduction ==
 
 *CR_MarkerExtensions* is a CodeRush plug-in that supports an alternate set of navigation commands for CodeRush "Markers". The out-of-the-box Marker navigation scheme works like a popcorn-trail of lightweight bookmarks in your code. It is "stack based" so the last marker dropped will be the first marker collected (LIFO). The alternate set of navigation commands supported by this plug-in work in "document" order (from top to bottom). There are a couple of other commands in this plug-in that you may find useful so check it out.
